--- a/bird.css
+++ b/bird.css
@@ -2,285 +2,383 @@ body{
     padding: 0;
     margin: 0;
 }
+a {
+    text-decoration: none;
+}
 .title {
-height: 5vh;
-text-align: center;
-text-align: center;
-font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-font-size: 1.5em;
-font-weight: 500;
-margin: 10px;
+    height: 5vh;
+    text-align: center;
+    text-align: center;
+    font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+    font-size: 1.5em;
+    font-weight: 500;
+    margin: 10px;
 }
 .slider {
--webkit-appearance: none;
-width: 80%;
-margin-left: 10%;
-margin-top:20px;
-height: 15px;
-background: #EF4765;
-outline: none;
-border: 5px solid #FF9A5A;
-border-radius: 8px;
-opacity: 0.9;
--webkit-transition: .2s;
-transition: opacity .2s;
+    -webkit-appearance: none;
+    width: 80%;
+    margin-left: 10%;
+    margin-top:20px;
+    height: 15px;
+    background: #EF4765;
+    outline: none;
+    border: 5px solid #FF9A5A;
+    border-radius: 8px;
+    opacity: 0.9;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
 }
 .slider:hover {
-opacity: 1;
+    opacity: 1;
 }
 
 .slider::-webkit-slider-thumb {
--webkit-appearance: none;
-appearance: none;
-width: 20px;
-height: 40px;
-background: #EF4765;
-cursor: pointer;
-border: 5px solid #FF9A5A;
-border-radius: 4px;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 40px;
+    background: #EF4765;
+    cursor: pointer;
+    border: 5px solid #FF9A5A;
+    border-radius: 4px;
 }
 @media (min-width: 767px) {
-.mobile {
-    display: none;
-}
-#mapContainer {
-    position: relative;
-    float: left;
-    height: 100vh;
-    width: 70%;
-}
-#map {
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-}
-img {
-    width: 300px;;
-}
-#legend {
-    display: none;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 9;
-    margin-left: 20px;
-    margin-bottom: 20px;
-}
-#selectors {
-    width: 30%;
-    height: 100vh;
-    float: left;
-}
-select {
-    width: 90%;
-    margin-left: 5%;
-    padding: 16px 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: #f1f1f1;
-    margin-top:10px;
-    font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-    font-size: 24px;
-    font-weight: 500;
-}
-.select2-selection {
-    font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-}
-.select2-container {
-    font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-}
-#dateContainer{
-    text-align: center;
-    font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-    font-size: 12px;
-    font-weight: 500;
-}
-#countContainer{
-    text-align: center;
-    font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-    font-size: 12px;
-    font-weight: 500;
-}
-.container{
-    text-align: center;
-    margin-bottom: 10px;
-}
-#notableBox {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 9;
-    margin-right: 30px;
-    margin-top: 20px;           
-}
-.button-Notables {
-    align-items: center;
-    appearance: none;
-    background-color: #FCFCFD;
-    border-radius: 4px;
-    border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
-    box-sizing: border-box;
-    color: #36395A;
-    cursor: pointer;
-    display: inline-flex;
-    font-family: "JetBrains Mono",monospace;
-    height: 48px;
-    justify-content: center;
-    line-height: 1;
-    list-style: none;
-    overflow: hidden;
-    padding-left: 16px;
-    padding-right: 16px;
-    position: relative;
-    text-align: left;
-    text-decoration: none;
-    transition: box-shadow .15s,transform .15s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    will-change: box-shadow,transform;
-    font-size: 18px;
+    .mobile {
+        display: none;
     }
+    #mapContainer {
+        position: relative;
+        float: left;
+        height: 100vh;
+        width: 70%;
+    }
+    #map {
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
+    img {
+        width: 300px;;
+    }
+    #legend {
+        display: none;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        z-index: 9;
+        margin-left: 20px;
+        margin-bottom: 20px;
+    }
+    #selectors {
+        width: 30%;
+        height: 100vh;
+        float: left;
+        overflow: auto;
+    }
+    select {
+        width: 90%;
+        margin-left: 5%;
+        padding: 16px 20px;
+        border: none;
+        border-radius: 4px;
+        background-color: #f1f1f1;
+        margin-top:10px;
+        font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+        font-size: 24px;
+        font-weight: 500;
+    }
+    .select2-selection {
+        font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+    }
+    .select2-container {
+        font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+    }
+    #dateContainer{
+        text-align: center;
+        font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+        font-size: 12px;
+        font-weight: 500;
+    }
+    #countContainer{
+        text-align: center;
+        font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+        font-size: 12px;
+        font-weight: 500;
+    }
+    .container{
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    #notableBox {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 9;
+        margin-right: 30px;
+        margin-top: 20px;           
+    }
+    .button-Notables {
+        align-items: center;
+        appearance: none;
+        background-color: #FCFCFD;
+        border-radius: 4px;
+        border-width: 0;
+        box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+        box-sizing: border-box;
+        color: #36395A;
+        cursor: pointer;
+        display: inline-flex;
+        font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+        height: 48px;
+        justify-content: center;
+        line-height: 1;
+        list-style: none;
+        overflow: hidden;
+        padding-left: 16px;
+        padding-right: 16px;
+        position: relative;
+        text-align: left;
+        text-decoration: none;
+        transition: box-shadow .15s,transform .15s;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        white-space: nowrap;
+        will-change: box-shadow,transform;
+        font-size: 18px;
+        }
 
     .button-Notables:focus {
-    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+        box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
     }
 
     .button-Notables:hover {
-    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    transform: translateY(-2px);
+        box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+        transform: translateY(-2px);
     }
 
     .button-Notables:active {
-    box-shadow: #D6D6E7 0 3px 7px inset;
-    transform: translateY(2px);
+        box-shadow: #D6D6E7 0 3px 7px inset;
+        transform: translateY(2px);
+    }
+    .notableListButton {
+        align-items: center;
+        appearance: none;
+        background-color: #FCFCFD;
+        border-radius: 4px;
+        border-width: 0;
+        box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+        box-sizing: border-box;
+        color: #36395A;
+        cursor: pointer;
+        display: inline-flex;
+        font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+        height: 28px;
+        justify-content: center;
+        line-height: 1;
+        list-style: none;
+        overflow: hidden;
+        padding-left: 8px;
+        padding-right: 8px;
+        margin: 4px;
+        position: relative;
+        text-align: left;
+        text-decoration: none;
+        transition: box-shadow .15s,transform .15s;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        white-space: nowrap;
+        will-change: box-shadow,transform;
+        font-size: 14px;
+    }
+    .notableListButton:focus {
+        box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    }
+
+    .notableListButton:hover {
+        box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+        transform: translateY(-2px);
+    }
+
+    .notableListButton:active {
+        box-shadow: #D6D6E7 0 3px 7px inset;
+        transform: translateY(2px);
+    }
+    .notableListButton:visited {
+        text-decoration: none;
     }
 }
 @media (max-width: 766px) {
-.desktop {
-    display: none;
-}
-.container {
-    width: 50%;
-    float: left;
-    text-align: center;
-}
-#mapContainer {
-    position: relative;
-    float: left;
-    height: 65vh;
-    width: 100%;
-}
-#map {
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-}
-img {
-    width: 40vw;
-}
-#legend {
-    display: none;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 9;
-    margin-left: 20px;
-    margin-bottom: 30px;
-}
-#selectors {
-    width: 100%;
-    height: 20vh;
-    float: left;
-    margin-top: 5vh;
-}
-select {
-    width: 95%;
-    margin-left: 5%;
-    padding: 16px 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: #f1f1f1;
-    margin-top:10px;
-}
-.select2-selection {
-    font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-    font-size: 12px;
-    font-weight: 500;
-}
-.select2-container {
-    font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-    font-size: 12px;
-    font-weight: 500;
-}
-#dateContainer{
-    text-align: center;
-    font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-    font-size: 12px;
-    font-weight: 500;
-}
-#countContainer{
-    text-align: center;
-    font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-    font-size: 12px;
-    font-weight: 500;
-}
-#notableBox {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 9;
-    margin-right: 30px;
-    margin-top: 20px;           
-}
-.button-Notables {
-    align-items: center;
-    appearance: none;
-    background-color: #FCFCFD;
-    border-radius: 4px;
-    border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
-    box-sizing: border-box;
-    color: #36395A;
-    cursor: pointer;
-    display: inline-flex;
-    font-family: "JetBrains Mono",monospace;
-    height: 36px;
-    justify-content: center;
-    line-height: 1;
-    list-style: none;
-    overflow: hidden;
-    padding-left: 12px;
-    padding-right: 12px;
-    position: relative;
-    text-align: left;
-    text-decoration: none;
-    transition: box-shadow .15s,transform .15s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    will-change: box-shadow,transform;
-    font-size: 14px;
+    .desktop {
+        display: none;
     }
+    .container {
+        width: 50%;
+        float: left;
+        text-align: center;
+    }
+    #mapContainer {
+        position: relative;
+        float: left;
+        height: 60vh;
+        width: 100%;
+    }
+    #map {
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
+    img {
+        width: 40vw;
+    }
+    #legend {
+        display: none;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        z-index: 9;
+        margin-left: 20px;
+        margin-bottom: 30px;
+    }
+    #selectors {
+        width: 100%;
+        height: 20vh;
+        float: left;
+        margin-top: 5vh;
+        overflow: auto;
+    }  
+    select {
+        width: 95%;
+        margin-left: 5%;
+        padding: 16px 20px;
+        border: none;
+        border-radius: 4px;
+        background-color: #f1f1f1;
+        margin-top:10px;
+
+    }
+    .select2-selection {
+        font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+        font-size: 12px;
+        font-weight: 500;
+    }
+    .select2-container {
+        font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+        font-size: 12px;
+        font-weight: 500;
+    }
+    #dateContainer{
+        text-align: center;
+        font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+        font-size: 12px;
+        font-weight: 500;
+    }
+    #countContainer{
+        text-align: center;
+        font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+        font-size: 12px;
+        font-weight: 500;
+    }
+    #notableBox {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 9;
+        margin-right: 30px;
+        margin-top: 20px;           
+    }
+    .button-Notables {
+        align-items: center;
+        appearance: none;
+        background-color: #FCFCFD;
+        border-radius: 4px;
+        border-width: 0;
+        box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+        box-sizing: border-box;
+        color: #36395A;
+        cursor: pointer;
+        display: inline-flex;
+        font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+        height: 36px;
+        justify-content: center;
+        line-height: 1;
+        list-style: none;
+        overflow: hidden;
+        padding-left: 12px;
+        padding-right: 12px;
+        position: relative;
+        text-align: left;
+        text-decoration: none;
+        transition: box-shadow .15s,transform .15s;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        white-space: nowrap;
+        will-change: box-shadow,transform;
+        font-size: 14px;
+        }
 
     .button-Notables:focus {
-    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+        box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
     }
 
     .button-Notables:hover {
-    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    transform: translateY(-2px);
+        box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+        transform: translateY(-2px);
     }
 
     .button-Notables:active {
-    box-shadow: #D6D6E7 0 3px 7px inset;
-    transform: translateY(2px);
+        box-shadow: #D6D6E7 0 3px 7px inset;
+        transform: translateY(2px);
+    }
+    .notableListButton {
+        align-items: center;
+        appearance: none;
+        background-color: #FCFCFD;
+        border-radius: 4px;
+        border-width: 0;
+        box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+        box-sizing: border-box;
+        color: #36395A;
+        cursor: pointer;
+        display: inline-flex;
+        font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+        padding: 5px;
+        margin: 4px;
+        justify-content: center;
+        line-height: 1;
+        list-style: none;
+        overflow: hidden;
+        position: relative;
+        text-align: left;
+        text-decoration: none;
+        transition: box-shadow .15s,transform .15s;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        white-space: nowrap;
+        will-change: box-shadow,transform;
+        font-size: 12px;
+    }
+    .notableListButton:focus {
+        box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    }
+
+    .notableListButton:hover {
+        box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+        transform: translateY(-2px);
+    }
+
+    .notableListButton:active {
+        box-shadow: #D6D6E7 0 3px 7px inset;
+        transform: translateY(2px);
+    }
+    .notableListButton:visited {
+        text-decoration: none;
     }
 }
