--- a/bird.css
+++ b/bird.css
@@ -6,13 +6,13 @@ a {
     text-decoration: none;
 }
 .title {
-    height: 5vh;
+    height: 3vh;
     text-align: center;
     text-align: center;
     font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-    font-size: 1.5em;
-    font-weight: 500;
-    margin: 10px;
+    font-size: 12px;
+    font-weight: 700;
+    margin: 5px;
 }
 .slider {
     -webkit-appearance: none;
@@ -265,9 +265,9 @@ a {
     }
     #selectors {
         width: 100%;
-        height: 20vh;
+        height: 35vh;
         float: left;
-        margin-top: 5vh;
+        margin-top: 2vh;
         overflow: auto;
     }  
     select {
