--- a/bird.css
+++ b/bird.css
@@ -145,6 +145,14 @@ a {
         margin-right: 30px;
         margin-top: 140px;
     }
+    #customPointBox {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 10;
+        margin-right: 30px;
+        margin-top: 180px;
+    }
     .button-Notables {
         align-items: center;
         appearance: none;
@@ -341,6 +349,14 @@ a {
         z-index: 10;
         margin-right: 10px;
         margin-top: 115px;
+    }
+    #customPointBox {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 10;
+        margin-right: 10px;
+        margin-top: 150px;
     }
     .button-Notables {
         align-items: center;
